Luka, Preethi | #82 | Adding functional test framework and test for Login page.