@@ -175,6 +175,17 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.9</version>
+                <configuration>
+                    <argLine>-XX:MaxPermSize=1024M -ea</argLine>
+                    <printSummary>true</printSummary>
+                    <includes>
+                        <include>**/*Test*.java</include>
+                        <include>**/*IT.java</include>
+                    </includes>
+                    <excludes>
+                        <exclude>**/functional/**/*Test.java</exclude>
+                    </excludes>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
